Add REST API for purge audit log
  Add rest API for purge audit log
  Extract scheduler, execution, task from GC controller for common use
